--- a/main.css
+++ b/main.css
@@ -1,6 +1,218 @@
-/* Ediit unordered list for navbar */
+/* Style unordered list for navbar */
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-left: 2rem;
+    padding-top: 2rem;
+    font-size: x-large;
+    font-family: sans-serif;
+    text-transform: lowercase;
+    
   }
+  /* Space out list items */
+  li {
+    padding-bottom: 2rem;
+    
+  }
+/* unvisited link colour */
+  a:link {
+    color:white;
+    text-decoration: none;
+  }
+  /* active link colour */
+a:active {
+  color:lightskyblue;
+  text-decoration: none;
+}
+/* visited link colour */
+a:visited {
+  color:white;
+  text-decoration: none;
+}
+
+/* hover link colour */
+a:hover {
+  color:grey;
+  text-decoration: none;
+}
+  /* Create CSS slider */
+  html { min-height: 100%; }
+  body { height: 100%; }
+  .slideshow {
+    list-style: none;
+    z-index: -1;
+  }
+  .slideshow li span {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    color: transparent;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
+    opacity: 0;
+    z-index: 0;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-animation: imageAnimation 24s linear infinite 0s;
+    -moz-animation: imageAnimation 24s linear infinite 0s;
+    animation: imageAnimation 24s linear infinite 0s;
+  }
+  .no-cssanimations .slideshow li span { opacity: 1; }
+
+  @-webkit-keyframes 
+imageAnimation { 0% {
+ opacity: 0;
+ -webkit-animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -webkit-animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-moz-keyframes 
+imageAnimation { 0% {
+ opacity: 0;
+ -moz-animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -moz-animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@keyframes 
+imageAnimation { 0% {
+ opacity: 0;
+ -webkit-animation-timing-function: ease-in;
+ -moz-animation-timing-function: ease-in;
+ animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -webkit-animation-timing-function: ease-out;
+ -moz-animation-timing-function: ease-out;
+ animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-webkit-keyframes 
+titleAnimation { 0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-moz-keyframes 
+titleAnimation { 0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@keyframes 
+titleAnimation { 0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+/* Slider from https://www.cssscript.com/fullscreen-fading-slideshow-with-pure-html-css/ */
+.slideshow li:nth-child(1) span { background-image: url(./images/Dick-Whittington_1.png); }
+.slideshow li:nth-child(2) span {
+  background-image: url(./images/Eathquakes-In-London_1-e1487775231868.png);
+  -webkit-animation-delay: 6s;
+  -moz-animation-delay: 6s;
+  animation-delay: 6s;
+}
+.slideshow li:nth-child(3) span {
+  background-image: url(./images/River-City-Scene-Still-3-e1487775348378.jpg);
+  -webkit-animation-delay: 12s;
+  -moz-animation-delay: 12s;
+  animation-delay: 12s;
+}
+.slideshow li:nth-child(4) span {
+  background-image: url(./images/Stephen_Redwood_Nights-Dream_still.jpg);
+  -webkit-animation-delay: 18s;
+  -moz-animation-delay: 18s;
+  animation-delay: 18s;
+}
+
+.slideshow li:nth-child(5) span {
+  background-image: url(./images/SR-Reaper6.jpg);
+  -webkit-animation-delay: 18s;
+  -moz-animation-delay: 18s;
+  animation-delay: 18s;
+}
+
+.slideshow li:nth-child(6) span {
+  background-image: url(./images/VelveteenRabbit_Tron100Festival2017_photo©RobinMitchell_118.jpg);
+  -webkit-animation-delay: 24s;
+  -moz-animation-delay: 24s;
+  animation-delay: 24s;
+}
+
+.slideshow li:nth-child(7) span {
+  background-image: url(./images/VelveteenRabbit_Tron100Festival2017_photo©RobinMitchell_129.jpg);
+  -webkit-animation-delay: 30s;
+  -moz-animation-delay: 30s;
+  animation-delay: 30s;
+}
